Bug 257812 - R: impossible to attach file in composer
Summary: R: impossible to attach file in composer
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: HI normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-24 19:50 UTC by Sabine Faure
Modified: 2010-12-05 21:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Impossible to browse to select a file in the 'Attach file' dialogue (35.28 KB, image/png)
2010-11-24 19:52 UTC, Sabine Faure
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-11-24 19:50:44 UTC
Version:           unspecified (using Devel) 
OS:                Linux

atm it is impossible to attach files to an email whereas it was possible last time I tested this.

Reproducible: Always

Steps to Reproduce:
- Launch Kmail-mobile
- Click on 'Write new email'
- Open the paper clip tab
- Click on 'Add Attachment'
- An 'Attach File - Kmail Mobile' dialogue appears

Actual Results:  
But in it it is impossible to scroll to select a file to attach

Expected Results:  
whereas it was possible before.

This is a regression.

N900, 4:4.6~20101123.1199921-1maemo1.1199914
Comment 1 Sabine Faure 2010-11-24 19:52:59 UTC
Created attachment 53703 [details]
Impossible to browse to select  a file in the 'Attach file' dialogue 

N900, 4:4.6~20101123.1199921-1maemo1.1199914
Comment 2 Sabine Faure 2010-11-29 01:42:45 UTC
I am setting this bug as High priority since it prevents me to test other functionalities linked to the attach functionality (ex: remove attachment, save attachment using floppy disk icon...)

N900, 4:4.6~20101128.1201814-1maemo1.1200957
Comment 3 Volker Krause 2010-11-29 11:13:41 UTC
SVN commit 1201985 by vkrause:

Use a native file dialog for adding attachments for mobile, so it
actually fits on the screen there.

BUG: 257812


 M  +7 -0      attachmentcontrollerbase.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1201985
Comment 4 Bjoern Ricks 2010-11-30 12:58:15 UTC
fixed in
Qt Version:             4.7.0~git20101111-0maemo1
Akonadi Version:        1.4.80.201011292103.git0f5f196-1maemo1.1199622
Kdelibs Version:        4:4.5+20101129.1202081-1maemo1.1193229
Kontact Mobile Version: 4:4.6~20101130.1202227-1maemo1.1202030
Comment 5 Sabine Faure 2010-12-05 21:56:32 UTC
Indeed is corrected now.

It is possible to browse and select an attachment now so I am closing this bug.

4:4.6~20101203.1203110-1maemo1.1202581