Use a native file dialog for adding attachments for mobile, so it actually fits on the screen there.

BUG: 257812

svn path=/trunk/KDE/kdepim/messagecomposer/; revision=1201985